alignment issue

--- a/styles/style.css
+++ b/styles/style.css
@@ -61,7 +61,7 @@ code {
     display        : flex;
     flex-direction : row;
     flex-wrap      : wrap;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 .a-box {
